Completed Basic Setup - Backend Structure - Sample Test Structure and Gradle config

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,20 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    integTest {
+        java.srcDir file('src/integTest/java')
+        resources.srcDir file('src/integTest/resources')
+    }
+}
+
+task integTest(type: Test) {
+    testClassesDir = sourceSets.integTest.output.classesDir
+    classpath = sourceSets.integTest.runtimeClasspath
+}
+
+check.dependsOn integTest
+
 
 archivesBaseName  ='db-connect'
 group = 'com.github.harshil'
@@ -26,6 +40,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+
+    integTestCompile sourceSets.main.output
+    integTestCompile configurations.testCompile
+    integTestCompile sourceSets.test.output
+    integTestRuntime configurations.testRuntime
+
     compile ("org.springframework.boot:spring-boot-starter-web"){
         exclude module: "spring-boot-starter-tomcat"
     }
@@ -42,7 +62,10 @@ dependencies {
 
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+
+    integTestCompile("junit:junit")
 }
+
 
 jar {
     baseName = archivesBaseName
