--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     compile "org.webjars:angular-ui:0.4.0-2"
     compile "org.webjars:angular-ui-bootstrap:0.10.0-1"
     compile "org.webjars:jquery:2.1.0-2"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.6'
+
 
     testCompile("junit:junit")
     testCompile("org.springframework.boot:spring-boot-starter-test")
