--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     }
     compile "org.springframework.boot:spring-boot-starter-jetty"
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
+
 
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.6'
 
@@ -76,3 +78,7 @@ task karmaRun(type:Exec){
     }
 
 }
+
+task jsTest(type: Test)
+
+karmaRun.mustRunAfter jsTest
